fixed jumpy buttons

--- a/chrome/content_script_external.css
+++ b/chrome/content_script_external.css
@@ -72,6 +72,7 @@
 	background-color: #000;
 	border: 0;
 	outline: 0;
+	line-height: 1.2em;
 	cursor: pointer;
 }
 .viroomie_cancel:hover,
